start making map

--- a/src/sass/blocks/_consultation.sass
+++ b/src/sass/blocks/_consultation.sass
@@ -47,6 +47,10 @@
             border: 1px solid #dddddd
             border-radius: 25px
             padding: 15px 25px
+            font-size: 13px
+            line-height: 51px
+            font-weight: 300
+            color: #616467
     &__btn
         position: absolute
         width: 200px
