--- a/src/sass/blocks/_narrow-screen.sass
+++ b/src/sass/blocks/_narrow-screen.sass
@@ -1,6 +1,6 @@
 .narrow-screen
     padding: 58px 0 75px 0
-    background: url('../img/agent/agent_bg.jpg') center (center/cover) no-repeat
+    background: url('../img/bg/narrow_screen_bg.jpg') center (center/cover) no-repeat
     &__icon
         position: relative
         margin: 0 auto 0 auto
