--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -1,6 +1,6 @@
 .promo
     padding-bottom: 82px
-    background: url('../img/promo/promo_bg.jpg') center (center/cover) no-repeat
+    background: url('../img/bg/promo_bg.jpg') center (center/cover) no-repeat
     &__header
         padding-top: 20px
         display: flex
