--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -33,3 +33,5 @@ h1, h2, h3, p
 @import "blocks/_consultation"
 @import "blocks/_scheme"
 @import "blocks/_feedback"
+@import "blocks/_text-us"
+@import "blocks/_map"
