--- a/src/sass/blocks/_feedback.sass
+++ b/src/sass/blocks/_feedback.sass
@@ -1,44 +1,44 @@
 .feedback
     padding: 51px 0 65px 0
+    &__wrap
+        position: relative
+        .prev
+            position: absolute
+            top: 39%
+            left: 43%
+        .next
+            position: absolute
+            top: 39%
+            right: 43%
 .slider
     position: relative
     margin-top: 31px
     &__item
-        display: flex
-        flex-direction: column
-        align-items: center
         opacity: 0.3
+        width: 600px
+        transform: scale(50%)
         &_active
-            display: flex
-            flex-direction: column
-            align-items: center
             opacity: 1
-    &__head
-        display: flex
-        align-items: center
+            transform: scale(100%)
     &__img
-        margin: 0 40px
+        margin: 0 auto
         width: 114px
         height: 114px
-    &__left, &__right
-        position: absolute
-        cursor: pointer
-        top: 12%
-    &__left
-        left: 40%
-    &__right
-        right: 40%
+        img
+            width: 100%
     &__descr
         margin-top: 20px
         width: 600px
         text-align: center
     &__name
         font-size: 18px
-        line-height: 22px
+        line-height: 18px
         font-weight: 700
         color: #3a3a3a
     &__text
-        margin-top: 12px
         font-size: 14px
-        font-weight: 300
         line-height: 22px
+        font-weight: 300
+    
+        position: relative
+   
