first version of slider

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -17,6 +17,10 @@ h1, h2, h3, p
     height: 1px
     background: var(--main-color)
     margin: 20px auto 17px auto
+    &_footer
+        width: 100%
+        background: #ffffff4d
+        margin: 26px 0 19px 0
 
 .container
     width: 1140px
@@ -35,3 +39,5 @@ h1, h2, h3, p
 @import "blocks/_feedback"
 @import "blocks/_text-us"
 @import "blocks/_map"
+@import "blocks/_footer"
+
