--- a/src/sass/blocks/_feedback.sass
+++ b/src/sass/blocks/_feedback.sass
@@ -4,21 +4,22 @@
         position: relative
         .prev
             position: absolute
-            top: 39%
+            top: 18%
             left: 43%
         .next
             position: absolute
-            top: 39%
+            top: 18%
             right: 43%
 .slider
     position: relative
     margin-top: 31px
     &__item
-        opacity: 0.3
         width: 600px
-        transform: scale(50%)
+        opacity: 0.3
+        // transform: scale(50%)
         &_active
             opacity: 1
+            transition: 0.6s all
             transform: scale(100%)
     &__img
         margin: 0 auto
@@ -39,6 +40,15 @@
         font-size: 14px
         line-height: 22px
         font-weight: 300
-    
         position: relative
+    &-wrapper
+        position: relative
+        // overflow: hidden
+        width: 600px
+        margin: 0 auto
+
+    &-inner
+        display: flex
+        justify-content: space-around
+        transition: 0.3s all
    
